<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_enter_forget_pwd_new_title"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/enter_forget_pwd_new_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/default_text_size_normal"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_enter_forget_pwd_new_identify_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_enter_forget_pwd_new_title"
        android:layout_marginLeft="@dimen/default_space_large"
        android:layout_marginRight="@dimen/default_space_large"
        android:layout_marginTop="@dimen/default_space_large">

        <EditText
            android:id="@+id/et_enter_forget_pwd_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/widget_bg_white_radiusleft_normal"
            android:hint="@string/enter_forget_pwd_new_identify_code_hint"
            android:maxLines="1"
            android:paddingBottom="@dimen/default_space_medium"
            android:paddingLeft="@dimen/default_space_medium"
            android:paddingTop="@dimen/default_space_medium"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/widget_bg_white_radiusright_normal"
            android:gravity="center"
            android:text="@string/enter_forget_pwd_new_identify_code"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_enter_forget_pwd_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_enter_forget_pwd_new_identify_code"
        android:layout_marginBottom="@dimen/default_space_large"
        android:layout_marginLeft="@dimen/default_space_large"
        android:layout_marginRight="@dimen/default_space_large"
        android:layout_marginTop="@dimen/default_space_large"
        android:background="@drawable/widget_bg_white_radius_normal"
        android:hint="@string/enter_forget_pwd_new_new_pwd_hint"
        android:paddingBottom="@dimen/default_space_medium"
        android:paddingLeft="@dimen/default_space_medium"
        android:paddingTop="@dimen/default_space_medium"/>

    <Button
        android:id="@+id/btn_enter_forget_pwd_new_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_enter_forget_pwd_new"
        android:layout_margin="@dimen/default_space_large"
        android:background="@drawable/widget_bg_red_radius_normal"
        android:text="@string/enter_forget_pwd_new_commit"
        android:textColor="@android:color/white"/>
</RelativeLayout>
